--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "email-sender",
+  "name": "send-grid-email",
   "version": "0.0.1",
   "description": "A simple email sender express server",
   "private": true,
@@ -12,17 +12,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
     "express": "~4.16.0",
     "express-rate-limit": "^3.4.0",
-    "express-validator": "^5.3.1",
-    "mailgun-js": "^0.22.0",
+    "express-validator": "^6.14.2",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "nodemon": "^2.0.19"
   }
 }
